reloads when not logged in

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ fetch(req)
       success();
     } 
 	else {
-      
+      document.location.reload(true)
       
     }
   }
@@ -182,7 +182,6 @@ fetch(req)
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
   function success() {
-    document.location.reload(true);
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
       console.log('Successful login for: ' + response.name);
