the previous two things in the commits fixed

--- a/index.html
+++ b/index.html
@@ -126,14 +126,19 @@ fetch(req)
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      success();
+      FB.api('/me', function(response) {
+       $("#facebook-login").remove();
+    });
     } 
 	else {
-      document.location.reload(true)
+      
+      FB.login();
       
     }
   }
-
+	
+	
+	
   // This function is called when someone finishes with the Login
   // Button.  See the onlogin handler attached to it in the sample
   // code below.
@@ -182,9 +187,7 @@ fetch(req)
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
   function success() {
-    console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
        $("#facebook-login").remove();
     });
   }
