--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@ fetch(req)
     });
     } 
 	else {
-      
-      FB.login();
-      document.location.reload();
     }
   }
 	
@@ -204,7 +201,7 @@ fetch(req)
  	<thead>
  		<th> <h1>NewsTruth</h1> </th>
  		<th class="text-right"> <div id="facebook-login" class="fb-login-button" data-width="50px" data-max-rows="1" data-size="small" data-button-type="login_with"
-		data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div> </th>
+		data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="checkLoginState();"></div> </th>
  	</thead>
 
   	</table>
