--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ fetch(req)
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
       FB.api('/me', function(response) {
-       $("#facebook-login").remove();
+       
     });
     } 
 	else {
@@ -194,7 +194,7 @@ fetch(req)
  	<thead>
  		<th> <h1>NewsTruth</h1> </th>
  		<th class="text-right"> <div id="facebook-login" class="fb-login-button" data-width="50px" data-max-rows="1" data-size="small" data-button-type="login_with"
-		data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" onlogin="checkLoginState();"></div> </th>
+		data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false" onlogin="checkLoginState();"></div> </th>
  	</thead>
 
   	</table>
