hides text after logout

--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@ fetch(req)
 	    $("#authorized-text").text("This app is meant for authorized users");
 		
         }
-        
-	  
+    else{
+    $("#authorized-text").hide();
+    }  
   }
 	
 	
