--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ fetch(req)
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
       
-      var user_access_token = FB.getAuthRespone()['accessToken'];
+      var user_access_token = FB.getAuthResponse()['accessToken'];
         
         //me?fields=about,address,education,birthday,age_range,currency,gender,first_name,hometown
         //fields=education,age_range,gender,first_name,hometown,work,is_verified
