--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ fetch(req)
       // Logged into your app and Facebook.
       
       user_access_token = FB.getAuthResponse()['accessToken'];
-      console.log(user_acess_token);
+      console.log(FB.getAuthResponse()['accessToken']);
 	    
         //me?fields=about,address,education,birthday,age_range,currency,gender,first_name,hometown
         //fields=education,age_range,gender,first_name,hometown,work,is_verified
@@ -143,6 +143,8 @@ fetch(req)
 	    $("#authorized-text").text("This app is meant for authorized users");
 		console.log(user_acess_token);
     } 
+
+    console.log(user_acess_token);
     else{
     $("#authorized-text").text("");
     }  
