spelling error yuh

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ fetch(req)
 	         for (var i in mydata.data) {
             console.log(i)
 				   }
-	         console.log(user_acess_token);
+	         console.log(user_access_token);
 	                                             });
 	    $("#authorized-text").text("This app is meant for authorized users");
-		console.log(user_acess_token);
+		console.log(user_access_token);
     } 
 
 
@@ -149,7 +149,7 @@ fetch(req)
     $("#authorized-text").text("");
     }
 
-    console.log(user_acess_token);  
+    console.log(user_access_token);  
   }
 	
 	
