mysterious === appeared in code

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ fetch(req)
     // app know the current login status of the person.
     // Full docs on the response object can be found in the documentation
     //for FB.getLoginStatus().
-    if (response.status === 'connected') {
+    if (response.status == 'connected') {
       // Logged into your app and Facebook.
       
       user_access_token = FB.getAuthResponse()['accessToken'];
