--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ fetch(req)
            //}
            
                                                });
-      $("#authorized-text").text("This app is meant for authorized users");
+      $("#authorized-text").text("This app is meant for authorized users, Welcome " + name_of_user);
     
     } 
     else{
