--- a/index.html
+++ b/index.html
@@ -138,17 +138,6 @@ web3.eth.defaultAccount = '0x87b3f6def4d451c41be733b8924da66dea0caed4'; // accou
 var contractAddress = '0x58b671784f4fa6b02e3dcac9f9dd215b66b5669b';// account to deploy contract
 
 
-// Update label every second
-
-setInterval(function() {
-
-  var balanceWei = web3.eth.getBalance(web3.eth.defaultAccount).toNumber();
-  var ethBalance = web3.fromWei(balanceWei, 'ether');
-
-}, 10000);
-
-
-
 
 // Load the SDK asynchronously
   
@@ -172,7 +161,14 @@ setInterval(function() {
         $.getJSON('https://graph.facebook.com/me?fields=education,age_range,gender,first_name,hometown,work,is_verified&access_token='+user_access_token, function(mydata) {
            
            name_of_user = mydata['first_name'];
-           $("#authorized-text").text("Welcome" + name_of_user + "ETH Balance:" + ethBalance);
+           // Update label every second
+
+            setInterval(function() {
+            var balanceWei = web3.eth.getBalance(web3.eth.defaultAccount).toNumber();
+            var ethBalance = web3.fromWei(balanceWei, 'ether'); }, 10000);
+
+            $("#authorized-text").text("Welcome" + name_of_user + "ETH Balance:" + ethBalance);
+
            //for (var i in mydata) {
             
            //}
