--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ var contractAddress = '0x58b671784f4fa6b02e3dcac9f9dd215b66b5669b';// account to
            name_of_user = mydata['first_name'];
            // Update label every second
 
-            window.addEventListener('load' function() {
+            window.addEventListener('load', function() {
 
             if (typeof web3 !== 'undefined') {
             // Use Mist/MetaMask's provider
