--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ var contractAddress = '0x58b671784f4fa6b02e3dcac9f9dd215b66b5669b';// account to
       
   });
      else{
+      console.log("called!");
     $("#authorized-text").text("");
     }
       }
