--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <script type="text/javascript">
 
 // window.fbAsyncInit.apply();
+function refreshTopic() {
+   return $("input-topic").val();
+}
+var topic = refreshTopic();
+
 
 function hideButtons(buttonid){
    $('#Fake' + buttonid).hide();
@@ -48,10 +53,7 @@ function vote(buttonAnswer, buttonid) {
 
 }
 
-function() refreshTopic{
-   return $("input-topic").val();
-}
-var topic = refreshTopic();
+
 
 var currentDate = new Date();
 console.log(currentDate.toLocaleDateString());
@@ -365,5 +367,5 @@ function statusChangeCallback(response) {
 
 </span>
 
-
+<script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 </html>
