--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 // window.fbAsyncInit.apply();
 function refreshTopic() {
-   return $("input-topic").val();
+   return document.getElementById("input-topic").val();
 }
 var topic = refreshTopic();
 
