--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ function statusChangeCallback(response) {
   window.fbAsyncInit = function() {
   
   FB.init({
-    appId      : '148790889053890',
+    appId        : '913367812144247',
+    //appId      : '148790889053890',
     cookie     : true,  // enable cookies to allow the server to access
                         // the session
     xfbml      : true,  // parse social plugins on this page
