--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ function vote(buttonAnswer, buttonid) {
   
 <script>
 //ETH Label Update
-import React from 'react'
-import ReactDOM from 'react-dom'
+//import React from 'react'
+//import ReactDOM from 'react-dom'
 
 
 class App extends React.Component {
