--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ function vote(buttonAnswer, buttonid) {
 //import React from 'react'
 //import ReactDOM from 'react-dom'
 
+var React = require('react');
+var ReactDOM = require('react-dom');
 
 class App extends React.Component {
 
