--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://use.fontawesome.com/c5f7817904.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/ethjs@0.3.0/dist/ethjs.min.js"></script>
-  
+  <script type="text/javascript" src="http://requirejs.org/docs/release/2.2.0/minified/require.js"></script>
 <script type="text/javascript">
 
 // window.fbAsyncInit.apply();
