--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ myContractInstance.vote(1,1,{
    // Result is the transaction address of that function
 })
 
- if (!$('#Fake0').is(":visible") && !$('#NotFake0').is(":visible") && !$('#Unsure0').is(":visible") && !$('#Fake1').is(":visible") && !$('#NotFake1').is(":visible") && !$('#Unsure1').is(":visible") !$('#Fake2').is(":visible") && !$('#NotFake2').is(":visible") && !$('#Unsure2').is(":visible") && !$('#Fake3').is(":visible") && !$('#NotFake3').is(":visible") && !$('#Unsure3').is(":visible") && !$('#Fake4').is(":visible") && !$('#NotFake4').is(":visible") && !$('#Unsure4').is(":visible") && !$('#Fake5').is(":visible") && !$('#NotFake5').is(":visible") && !$('#Unsure5').is(":visible")) {
+ if ($('#Fake0').is(":visible")==false && $('#NotFake0').is(":visible")==false && $('#Unsure0').is(":visible")==false && $('#Fake1').is(":visible")==false && $('#NotFake1').is(":visible")==false && $('#Unsure1').is(":visible")==false !$('#Fake2').is(":visible") ==false&& $('#NotFake2').is(":visible")==false && $('#Unsure2').is(":visible")==false && $('#Fake3').is(":visible")==false && $('#NotFake3').is(":visible")==false && $('#Unsure3').is(":visible")==false && $('#Fake4').is(":visible")==false && $('#NotFake4').is(":visible")==false && $('#Unsure4').is(":visible")==false && $('#Fake5').is(":visible")==false && $('#NotFake5').is(":visible")==false && $('#Unsure5').is(":visible")==false {
 
  	var resultsArray = new Array(5);
     
