--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ myContractInstance.vote(1,1,{
    // Result is the transaction address of that function
 })
 
- if ($('#Fake0').is(":visible")==false && $('#NotFake0').is(":visible")==false && $('#Unsure0').is(":visible")==false && $('#Fake1').is(":visible")==false && $('#NotFake1').is(":visible")==false && $('#Unsure1').is(":visible")==false !$('#Fake2').is(":visible") ==false&& $('#NotFake2').is(":visible")==false && $('#Unsure2').is(":visible")==false && $('#Fake3').is(":visible")==false && $('#NotFake3').is(":visible")==false && $('#Unsure3').is(":visible")==false && $('#Fake4').is(":visible")==false && $('#NotFake4').is(":visible")==false && $('#Unsure4').is(":visible")==false && $('#Fake5').is(":visible")==false && $('#NotFake5').is(":visible")==false && $('#Unsure5').is(":visible")==false {
+ if ($('#Fake0').is(":visible")==false && $('#NotFake0').is(":visible")==false && $('#Unsure0').is(":visible")==false && $('#Fake1').is(":visible")==false && $('#NotFake1').is(":visible")==false && $('#Unsure1').is(":visible")==false $('#Fake2').is(":visible") ==false&& $('#NotFake2').is(":visible")==false && $('#Unsure2').is(":visible")==false && $('#Fake3').is(":visible")==false && $('#NotFake3').is(":visible")==false && $('#Unsure3').is(":visible")==false && $('#Fake4').is(":visible")==false && $('#NotFake4').is(":visible")==false && $('#Unsure4').is(":visible")==false && $('#Fake5').is(":visible")==false && $('#NotFake5').is(":visible")==false && $('#Unsure5').is(":visible")==false {
 
  	var resultsArray = new Array(5);
     
