--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@ function clickvoteEther(artid,voteid){
  if ($('#Fake0').is(":visible")==false && $('#NotFake0').is(":visible")==false && $('#Unsure0').is(":visible")==false && $('#Fake1').is(":visible")==false && $('#NotFake1').is(":visible")==false && $('#Unsure1').is(":visible")==false && $('#Fake2').is(":visible") ==false&& $('#NotFake2').is(":visible")==false && $('#Unsure2').is(":visible")==false && $('#Fake3').is(":visible")==false && $('#NotFake3').is(":visible")==false && $('#Unsure3').is(":visible")==false && $('#Fake4').is(":visible")==false && $('#NotFake4').is(":visible")==false && $('#Unsure4').is(":visible")==false && $('#Fake5').is(":visible")==false && $('#NotFake5').is(":visible")==false && $('#Unsure5').is(":visible")==false) {
 
  	
- 	$('#result1').text("NotFake");
- 	$('#result2').text("NotFake");
- 	$('#result3').text("NotFake");
- 	$('#result4').text("Unsure");
- 	$('#result5').text("Fake");
+ 	$('#result1').text("");
+ 	$('#result2').text("");
+ 	$('#result3').text("");
+ 	$('#result4').text("");
+ 	$('#result5').text("");
 
 }
  	// var resultsArray = new Array(5);
